// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize footnote knows footnotes 1`] = `
Array [
  Object {
    "label": "1",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "footnote.label",
  },
  Object {
    "position": Object {
      "end": Object {
        "column": 17,
        "line": 0,
      },
      "start": Object {
        "column": 7,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;

exports[`tokenize footnote knows footnotes 2`] = `
Array [
  Object {
    "label": "word",
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "footnote.label",
  },
  Object {
    "position": Object {
      "end": Object {
        "column": 20,
        "line": 0,
      },
      "start": Object {
        "column": 10,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;

exports[`tokenize footnote knows footnotes 3`] = `
Array [
  Object {
    "label": "word_",
    "position": Object {
      "end": Object {
        "column": 10,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "footnote.label",
  },
  Object {
    "position": Object {
      "end": Object {
        "column": 21,
        "line": 0,
      },
      "start": Object {
        "column": 11,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;

exports[`tokenize footnote knows footnotes 4`] = `
Array [
  Object {
    "label": "wor1d_",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "footnote.label",
  },
  Object {
    "position": Object {
      "end": Object {
        "column": 22,
        "line": 0,
      },
      "start": Object {
        "column": 12,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;

exports[`tokenize footnote knows these are not footnotes 1`] = `
Array [
  Object {
    "label": "1",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.footnote",
  },
  Object {
    "position": Object {
      "end": Object {
        "column": 22,
        "line": 0,
      },
      "start": Object {
        "column": 6,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;

exports[`tokenize footnote knows these are not footnotes 2`] = `
Array [
  Object {
    "label": "1",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
    "type": "text.footnote",
  },
  Object {
    "position": Object {
      "end": Object {
        "column": 22,
        "line": 0,
      },
      "start": Object {
        "column": 7,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;

exports[`tokenize footnote knows these are not footnotes 3`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 1,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
  Object {
    "label": "1",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
    "type": "text.footnote",
  },
  Object {
    "position": Object {
      "end": Object {
        "column": 22,
        "line": 0,
      },
      "start": Object {
        "column": 7,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;

exports[`tokenize footnote knows these are not footnotes 4`] = `
Array [
  Object {
    "label": "1",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
    "type": "text.footnote",
  },
  Object {
    "position": Object {
      "end": Object {
        "column": 22,
        "line": 0,
      },
      "start": Object {
        "column": 7,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;
